# LSM-vs-BTREE

./: .gitignore  CMakeLists.txt  FBTree_Read_Path_Walkthrough.md  README.md  build.sh  plot_throughput_graphs.py  requirements.txt  run_btree.sh  run_lsm.sh  zipf_implementation.h
ART_LIMITED_Nodes_SCR/: a.csv  b.csv  c.csv
ART_LIMITED_Version_num/: a.csv  b.csv  c.csv  notes
ART_NO_SCR/: a.csv  b.csv  c.csv
artolc_results/: a.csv  b.csv  c.csv
artolc_results_/: a.csv  b.csv  c.csv
btree/: btree.cpp
fbtree_results/: c.csv
lsm/: SSTables.h  global.h  lsm_tree.h
lsm_results/: a.csv  b.csv  c.csv  hashmap  memtable_benchmark.csv
moose/: CLAUDE.md
old_implementation/: CMakeLists.txt  build.sh  run_lsm.sh
old_implementation/LSM/: CMakeLists.txt  README.md
old_implementation/LSM/benchmark/: memtable_benchmark.cpp  simple_memtable_benchmark.cpp
old_implementation/LSM/memtable/: custom_skiplist.h  custom_skiplist_memtable.cpp  custom_skiplist_memtable.h  global.h  memtable_factory.cpp  memtable_interface.h  skiplist_memtable.cpp  skiplist_memtable.h
old_implementation/LSM/test/: memtable_test.cpp
old_implementation/btree/: btree.cpp  btree.h
old_implementation/fbtree/: CMakeLists.txt  fbtree_benchmark
old_implementation/lsm/: BloomFilter.h  RegisterBlockedBloomFilter.h  SSTables.h  global.h  learned_index.cpp  learned_index.h  lsm.cpp
old_implementation/lsm_results/: a.csv  b.csv  c.csv
results/: performance_analysis.ipynb  plot.py
results/artolc-cache-flush_results/: a.csv  b.csv  c.csv
results/artolc_results/: a.csv  b.csv  c.csv
results/btreeolc_results/: a.csv  b.csv  c.csv
results/fbtree-cache-flush_results/: a.csv  b.csv  c.csv
results/fbtree_results/: a.csv  b.csv  c.csv
results/masstree_results/: a.csv  b.csv  c.csv
results/optiql_results/: a.csv  b.csv  c.csv
scripts/: set_uncore_frequency.sh
